# algorithmia

./: .gitignore  ALGORITHMIA PLOT OUTLINE (ROUGH).md  ALGORITHMIA_CHRONOLOGICAL_STORY_OVERVIEW.md  ALGORITHMIA_STORY_SO_FAR.md  CHANGELOG.md  CONTRIBUTING.md  HENRY_VISION.md  README.md  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: tests.yml
algorithimia/: __init__.py  cli.py  encounters.py  engine.py  game_shell.py  trace_viewer.py  visualizers.py
algorithimia/language/: __init__.py  python_adapter.py
docs/: ALGORITHIMIA_CONTINUITY.md  ALGORITHMIA_CONTINUITY.md  ARCHITECTURE.md  AUDIO_DIRECTION.md  CAMPAIGN_ATLAS.md  GRAPHREACH_EXPLORATION.md  PHASER_MIGRATION.md  PROJECT_OWNERSHIP.md  SAFE_EXECUTION.md
music/: algorithmia-menu-theme.ultrabox.json
scripts/: check-js.mjs  compose-algorithmia-menu-theme.mjs  copy-phaser.mjs  serve-web.mjs
tests/: __init__.py  campaign_atlas_browser_smoke.cjs  graphreach_browser_smoke.cjs  ldtk_chapter_browser_smoke.cjs  slime_arena_browser_smoke.cjs  test_cli_edge_cases.py  test_engine.py  test_game_shell.py  test_trace_viewer.py  test_web_room_maps.py  title_browser_smoke.cjs  workshop_browser_smoke.cjs
web/: index.html
web/css/: style.css
web/js/: admin.js  audio.js  battle.js  battleHud.js  bogoBossBattle.js  campaignAtlas.js  campaignAtlasArt.js  campaignAtlasData.js  campaignAtlasEncounters.js  chapter1.js  chapter2.js  chapter3.js  chapter4.js  chapter5.js  codeBattle.js  combatState.js  dialogue.js  graphreachExploration.js  graphreachSpaceData.js  main.js  pixelLogo.js  room.js  (+19 more)
(+5 files in other folders)
