[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithimia"
version = "0.1.0"
description = "A DSA programming RPG prototype."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["algorithimia*"]

[project.scripts]
algorithimia = "algorithimia.cli:main"

[tool.setuptools.package-data]
algorithimia = ["assets/phase1/*.svg"]
