[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithimia"
version = "0.2.0"
description = "Legacy validation and trace engine for the Algorithmia programming RPG."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["algorithimia*"]

[project.scripts]
algorithimia = "algorithimia.cli:main"

[tool.setuptools.package-data]
algorithimia = ["assets/phase1/*.svg"]
